# mcp-demo

./: .env.example  .gitignore  README.md  cspell.json  docker-compose.yml
api/: .dockerignore  .env.sample  Dockerfile  Dockerfile.prisma  README.md  package-lock.json  package.json
api/prisma/: schema.prisma  seed.ts
api/src/: app.module.ts  main.ts
api/src/accounts/: accounts.service.ts
api/src/agents/: agent.service.ts
api/src/auth/: auth.decorator.ts
api/src/chat/: chat.controller.ts  chat.module.ts  chat.service.ts
api/src/chat/dto/: create-chat.dto.ts
api/src/health/: health.controller.ts
api/src/notifications/: notifications.controller.ts  notifications.service.ts
api/src/orders/: orders.controller.ts  orders.service.ts
api/src/products/: products.service.ts
api/src/users/: users.service.ts
client/: .dockerignore  .prettierrc  Dockerfile  README.md  entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
client/src/: App.tsx
client/src/hooks/: use-sidebar.ts
client/src/lib/: constants.ts  types.ts  utils.ts
docs/: c4.mmd
mcpserver/: .dockerignore  .env.example  Dockerfile  README.md  app.py  main.py  pyproject.toml
mcpserver/core/: config.py  db.py
mcpserver/models/: account.py  base.py  chat.py  order.py  product.py  promotion.py  user.py
mcpserver/prisma/: schema.prisma
mcpserver/services/: account.py  category.py  notification.py  order.py  product.py  promotion.py  user.py
mcpserver/tools/: catalog.py  crm.py  erp.py  notification.py
mcpserver/utils/: logs.py
(+87 files in other folders)
